--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,13 +10,9 @@
 name: Upload Python Package
 
 on:
-    push:
-        branches:
-            -main
-    pull_request:
-        branches:
-        - main
-
+  push:
+    branches:
+    - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.7'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -35,6 +31,5 @@ jobs:
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-        # PyPI username
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
